# passcore

./: .gitignore  Cargo.toml  README.md  ideas.md  performance-tips.md
src/: lib.rs  score.rs  tests.rs
